complete auth routes
